--- a/Makefile.target
+++ b/Makefile.target
@@ -14,6 +14,9 @@ ifeq ($(UNAME), Linux)
 # for Linux include file
 SRC_DEP = ./src/linux
 CFLAG += -D_LINUX
+CFLAG += -lbsd
+OBJ += compel/infect.a
+OBJ += soccr/libsoccr.a
 endif
 
 ifeq ($(UNAME), FreeBSD)
