--- a/Makefile.target
+++ b/Makefile.target
@@ -63,6 +63,7 @@ COBJ += $(SRC_DIR)/getall.o
 
 ROBJ += $(SRC_DIR)/setmem.o
 ROBJ += $(SRC_DIR)/breakpoint.o
+ROBJ += $(SRC_DIR)/restore-mem.o
 ROBJ += $(SRC_DIR)/restore.o
 
 %.o: %.c
